Correction of code and images
Correction of code and images according to homework requirements

--- a/index.html
+++ b/index.html
@@ -20,24 +20,27 @@
 				<li><a href="">Портфолио</a></li>
 				<li><a href="">Контакты</a></li>
 			</ul>
+		</nav>
+
 			<!--Links to email and phone -->
 			<ul>
-				<li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>	</li>
-				<li><a href="tel:+380961111111" class="contact-link">+380961111111</a></li>
+				<li><a href="mailto:info@devstudio.com" >info@devstudio.com</a>	</li>
+				<li><a href="tel:+380961111111" >+380961111111</a></li>
 			</ul>
-		</nav>
+
+
 	</header>
 
 	<main>
 	<!-- HERO -->
 			<section>
 			<h1>Эффективные решения <br> для вашего бизнеса</h1>
-			<a href="">Заказать услугу</a>
+			<button type="button">Заказать услугу</button>
 		</section>
 
-	<!-- peculiarities - особливості-->
+	<!-- peculiarities - Особенности-->
 	<section>
-		<h2>Особливості</h2>
+		<h2>Особенности</h2>
 		<ul>
 			<li>
 				<h3>Внимание к деталям</h3>
@@ -63,13 +66,13 @@
 		<h2>Чем мы занимаемся</h2>
 		<ul>
 			<li>
-				<img src="./imeg/img_1.jpg" alt="десктопные приложения" width="370">
+				<img src="./images/img_1.jpg" alt="десктопные приложения" width="370">
 			</li>
 			<li>
-				<img src="./imeg/img_2.jpg" alt="мобильные приложения" width="370">
+				<img src="./images/img_2.jpg" alt="мобильные приложения" width="370">
 			</li>
 			<li>
-				<img src="./imeg/img_3.jpg" alt="дизайнерские решения" width="370">
+				<img src="./images/img_3.jpg" alt="дизайнерские решения" width="370">
 			</li>
 		</ul>
 	</section>
@@ -79,22 +82,22 @@
 		<h2>Наша команда</h2>
 		<ul>
 			<li>
-				<img src="./imeg/img_4.jpg" alt="Игорь Демьяненко" width="270">
+				<img src="./images/img_4.jpg" alt="Игорь Демьяненко" width="270">
 				<h3>Игорь Демьяненко</h3>
 				<p>Product Designe</p>
 			</li>
 			<li>
-				<img src="./imeg/img_5.jpg" alt="Ольга Репина" width="270">
+				<img src="./images/img_5.jpg" alt="Ольга Репина" width="270">
 				<h3>Ольга Репина</h3>
 				<p>Frontend Developer</p>
 			</li>
 			<li>
-				<img src="./imeg/img_6.jpg" alt="Николай Тарасов" width="270">
+				<img src="./images/img_6.jpg" alt="Николай Тарасов" width="270">
 				<h3>Николай Тарасов</h3>
 				<p>Marketing</p>
 			</li>
 			<li>
-				<img src="./imeg/img_7.jpg" alt="Михаил Ермаков" width="270">
+				<img src="./images/img_7.jpg" alt="Михаил Ермаков" width="270">
 				<h3>Михаил Ермаков</h3>
 				<p>UI Designer</p>
 			</li>
